fixes overflow issue // updates readme

--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -1,9 +1,16 @@
 html {
   overflow-x: hidden;
+  width: 100%;
 }
 
 html body {
   background: black;
+  overflow-x: hidden;
+  width: 100%;
+
+  .content {
+    overflow: hidden;
+  }
 
   p {
     color: white;
