--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -5,6 +5,7 @@ header {
     left: 0;
     right: 0;
     z-index: 2;
+    width: 100%;
   }
 
   .navbar {
